--- a/react/components/button.html
+++ b/react/components/button.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     
-    <link rel="preload" href="/plugin-docs/assets/css/0.styles.71f25e5e.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.f451d575.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/2.434c690b.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/9.a8b67f92.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.50c7e6b6.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.a78e401a.js"><link rel="prefetch" href="/plugin-docs/assets/js/3.d2d4cdfd.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.8e39e595.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.2991fb43.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.f6007569.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.9fa549cc.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.d6182f0e.js">
+    <link rel="preload" href="/plugin-docs/assets/css/0.styles.71f25e5e.css" as="style"><link rel="preload" href="/plugin-docs/assets/js/app.63a1d654.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/2.434c690b.js" as="script"><link rel="preload" href="/plugin-docs/assets/js/9.a8b67f92.js" as="script"><link rel="prefetch" href="/plugin-docs/assets/js/10.50c7e6b6.js"><link rel="prefetch" href="/plugin-docs/assets/js/11.a78e401a.js"><link rel="prefetch" href="/plugin-docs/assets/js/12.5e708278.js"><link rel="prefetch" href="/plugin-docs/assets/js/13.903e3a2c.js"><link rel="prefetch" href="/plugin-docs/assets/js/3.d2d4cdfd.js"><link rel="prefetch" href="/plugin-docs/assets/js/4.ead6d505.js"><link rel="prefetch" href="/plugin-docs/assets/js/5.2991fb43.js"><link rel="prefetch" href="/plugin-docs/assets/js/6.f6007569.js"><link rel="prefetch" href="/plugin-docs/assets/js/7.9fa549cc.js"><link rel="prefetch" href="/plugin-docs/assets/js/8.d6182f0e.js">
     <link rel="stylesheet" href="/plugin-docs/assets/css/0.styles.71f25e5e.css">
   </head>
   <body>
@@ -19,11 +19,15 @@
   React
 </a></div> <!----></nav></div></header> <div class="sidebar-mask"></div> <aside class="sidebar"><nav class="nav-links"><div class="nav-item"><a href="/plugin-docs/react/" class="nav-link router-link-active">
   React
-</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>Components</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/plugin-docs/react/components/button.html" aria-current="page" class="active sidebar-link">Button</a></li><li><a href="/plugin-docs/react/components/markdown.html" class="sidebar-link">Markdown</a></li><li><a href="/plugin-docs/react/components/tooltip.html" class="sidebar-link">Tooltip</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="button"><a href="#button" class="header-anchor">#</a> Button</h1></div> <footer class="page-edit"><!----> <!----></footer> <div class="page-nav"><p class="inner"><!----> <span class="next"><a href="/plugin-docs/react/components/markdown.html">
+</a></div> <!----></nav>  <ul class="sidebar-links"><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading"><span>React Intro</span> <span class="arrow right"></span></p> <!----></section></li><li><section class="sidebar-group collapsable depth-0"><p class="sidebar-heading open"><span>Components</span> <span class="arrow down"></span></p> <ul class="sidebar-links sidebar-group-items"><li><a href="/plugin-docs/react/components/button.html" aria-current="page" class="active sidebar-link">Button</a></li><li><a href="/plugin-docs/react/components/markdown.html" class="sidebar-link">Markdown</a></li><li><a href="/plugin-docs/react/components/tooltip.html" class="sidebar-link">Tooltip</a></li></ul></section></li></ul> </aside> <main class="page"> <div class="theme-default-content content__default"><h1 id="button"><a href="#button" class="header-anchor">#</a> Button</h1></div> <footer class="page-edit"><!----> <!----></footer> <div class="page-nav"><p class="inner"><span class="prev">
+      ←
+      <a href="/plugin-docs/react/intro/components.html" class="prev">
+        Components
+      </a></span> <span class="next"><a href="/plugin-docs/react/components/markdown.html">
         Markdown
       </a>
       →
     </span></p></div> </main></div><div class="global-ui"></div></div>
-    <script src="/plugin-docs/assets/js/app.f451d575.js" defer></script><script src="/plugin-docs/assets/js/2.434c690b.js" defer></script><script src="/plugin-docs/assets/js/9.a8b67f92.js" defer></script>
+    <script src="/plugin-docs/assets/js/app.63a1d654.js" defer></script><script src="/plugin-docs/assets/js/2.434c690b.js" defer></script><script src="/plugin-docs/assets/js/9.a8b67f92.js" defer></script>
   </body>
 </html>
